proxy dzialajace